Align wiki title styling with issues

--- a/app/assets/stylesheets/page_bundles/wiki.scss
+++ b/app/assets/stylesheets/page_bundles/wiki.scss
@@ -16,8 +16,8 @@
   }
 
   .wiki-page-title {
-    margin: 0;
-    font-size: 22px;
+    margin: 0 0 0.8rem;
+    font-size: 1.25em;
   }
 
   .wiki-last-edit-by {
